--- a/static/slides/11-interactive-viz/slides_covid.Rmd
+++ b/static/slides/11-interactive-viz/slides_covid.Rmd
@@ -29,7 +29,7 @@ code.r,code.cpp{
 </style>
 
 
-```{r include=FALSE}
+```{r, eval=TRUE, include=FALSE}
 library(knitr)
 library(here)
 library(magrittr)
@@ -49,18 +49,13 @@ if(!require(plotly)) install.packages("plotly", repos = "http://cran.us.r-projec
 if(!require(geojsonio)) install.packages("geojsonio", repos = "http://cran.us.r-project.org")
 
 opts_chunk$set(
+  warning = FALSE,
+  #eval=FALSE,
   echo = TRUE,
   fig.width = 7, 
   fig.align = 'center',
   fig.asp = 0.618, # 1 / phi
   out.width = "700px")
-
-# import data
-cv_states = read.csv("input_data/coronavirus_states.csv")
-cv_states$date = as.Date(cv_states$date, format="%Y-%m-%d")
-
-# cv_states_today
-cv_states_today = subset(cv_states, date==max(cv_states$date))
 
 ```
 
@@ -70,9 +65,7 @@ cv_states_today = subset(cv_states, date==max(cv_states$date))
 
 ## What is interactive visualization?
 
-- Interactive visualization involves the creation and sharing of interactive data objects
-
-- Interactive data objects are graphical representations of data, model, or results that allow a user to directly manipulate and explore
+- Interactive visualization involves the creation and sharing of graphical representations of data, model, or results that allow a user to directly manipulate and explore
 
 - Some example products and packages in R:
 --
@@ -93,7 +86,7 @@ cv_states_today = subset(cv_states, date==max(cv_states$date))
 
 ## What is interactive visualization (cont'd)
 
-- Interactivity allows users to engage with data, a model, algorithm, or other visualization in a way that static visuals cannot
+- Interactivity allows users to engage with data / models in a way that static visuals cannot
 
 - Features of interactivity include: 
 --
@@ -116,12 +109,6 @@ cv_states_today = subset(cv_states, date==max(cv_states$date))
 
 # Why use interactive visualization?
 
-  - In this course we’ve covered visualization and in particular how `ggplot()` can help to make static plots with many dimensions
-
-  - But what if you want to explore a third or fourth dimension of data -- quickly? Or without all the noise? Or identify strange values?
-
-  - Or, what if you want to communicate your findings to an external audience? Specifically, if you want that audience to engage with or explore the data?
-
 Interactive visualization helps with both the **exploration** and **communication** parts of the data science process
 
 <div style="text-align: center;">
@@ -135,42 +122,27 @@ Interactive visualization helps with both the **exploration** and **communicatio
 
 ## Interactive Visualization for **exploratory data analysis** (EDA)
 
-- Interactive graphics are well suited to aid the exploration of high-dimensional or otherwise complex data
-
-- Interacting with information in a visual way helps to enable insights that wouldn’t be easy or even possible with static graphics, for reasons including:
-
---
-  - **Investigate faster**: In a true exploratory setting, you have to make lots of visualizations, and investigate lots of follow-up questions, before stumbling across something truly valuable. Interactive visualization can aid in the sense-making process by searching for information quickly without fully specified questions (Unwin and Hofmann 1999)
+Interactive graphics are well suited to aid the exploration of high-dimensional or otherwise complex data. Interacting with information in a visual way helps to enable insights that wouldn’t be easy or even possible with static graphics, for reasons including:
 
 --
 
-  - **Identifying relationships or structure that would otherwise go missing** (J. W. Tukey and Fisherkeller 1973)
+1. **Investigate faster**: In a true exploratory setting, you have to make lots of visualizations, and investigate lots of follow-up questions, before stumbling across something truly valuable. Interactive visualization can aid in the sense-making process by searching for information quickly without fully specified questions (Unwin and Hofmann 1999)
 
 --
 
-  - **Understand and diagnose problems with data, models, or algorithms** (Wickham, Cook, and Hofmann 2015)
+2. **Identifying relationships or structure that would otherwise go missing** (J. W. Tukey and Fisherkeller 1973)
 
----
+--
 
-## Interactive Visualization for **EDA** (cont'd)
-
-  - In a true exploratory setting, you have to make lots of visualizations, and investigate lots of follow-up questions, before stumbling across something truly valuable
-
-  - Although interactivity can augment EDA, it’s typically only *practical* when we can create and alter visuals quickly
-
-  - Plotly and Leaflet are well suited to these tasks -- they make the added effort required to enable functionality relatively small
-
----
-
-## Interactive Visualization for **EDA** (cont'd)
-
-- Use the LA times data -- show the erroneous value
+3. **Understand or diagnose problems with data, models, or algorithms** (Wickham, Cook, and Hofmann 2015)
 
 ---
 
 ## Interactive visualization for **communication**
 
-- Engagement with information has been shown to improve the ability to retain information
+Interactive graphics are well suited to communicating high-dimensional or otherwise complex data. Interacting with information in a visual way may help communicating data, models, and results for reasons including: 
+
+(1) Engagement with information has been shown to improve the ability to retain information
 
 <div style="text-align: center;">
   <figure>
@@ -183,12 +155,10 @@ Interactive visualization helps with both the **exploration** and **communicatio
 
 ## Interactive visualization for **communication** (cont'd)
 
-- Automate and efficiently share multiple dimensions of data/models/findings or complex analysis tasks
+(2) Automate and efficiently share multiple dimensions of data/models/findings or complex analysis tasks
 
-- Help users to better understand, and make decisions on, data/models/findings
+(3) Help users to better understand, and make decisions on, data/models/findings
 
-[Our COVID modeling website](https://uscbiostats.github.io/COVID19/index.html)
-  
 <div style="text-align: center;">
   <a href="https://epimodel.shinyapps.io/covid-university/">
   <figure>
@@ -201,9 +171,9 @@ Interactive visualization helps with both the **exploration** and **communicatio
 
 ## Interactive visualization for **communication** (cont'd)
 
-- Tell a more interesting or engaging story, presenting multiple viewpoints of data
+(4) Tell a more interesting or engaging story, presenting multiple viewpoints of data
 
-- Allow users to focus on the aspects most important to them, making the user more likely to understand, learn from, remember and appreciate the data
+(5) Allow users to focus on the aspects most important to them, making the user more likely to understand, learn from, remember and appreciate the data
 
 <div style="text-align: center;">
   <a href="https://inequality.media.mit.edu/">
@@ -215,18 +185,26 @@ Interactive visualization helps with both the **exploration** and **communicatio
 
 ---
 
-# Plan for today
+# Schedule: 3 Class Sessions on Interactive Visualization 
 
-- Survey of interactive graphics in both of their uses: exploration and communication 
+**10/28 (Today)**:
+  - Creating interactive graphs with **plotly** for R package and tables with **DataTable**
 
-  - We're going to look at creating interactive graphs, maps, and tables with `Plotly`, `Leaflet`, and `formattable`
+**11/04**: 
+  - Create a website using RStudio and GitHub Pages
+  - Share your interactive graphics
+  - Survey other options for sharing interactive graphics (Shiny apps, dashboards)
 
-  - We will look at how to share these plots
-  
-  - You will create your own project website using RStudio and GitHub pages
+**11/11**:  
+  1. Guest speakers discussing interactive visualization in practice
+    - [BioRealm.ai](https://www.biorealm.ai/) (data science statistical genetics company)
+    - [NASA JPL](https://www.jpl.nasa.gov/)
 
-  - We will survey other possibilities (Shiny apps, dashboards)
+  2. Project workshop
 
+---
+
+# Plotly
 
 ---
 
@@ -238,37 +216,12 @@ Interactive visualization helps with both the **exploration** and **communicatio
   </figure>
 </div>
 
-  - Plotly is a web application for creating and sharing interactive graphics
+  - Plotly is an open source interactive graphing library creating and sharing interactive graphics
 
-  - Is powered by JavaScript graphing library plotly.js and is designed on principles of adding layers
+  - It is powered by the JavaScript graphing library [plotly.js](https://github.com/plotly/plotly.js) and is designed on principles of adding layers
 
   - Plotly can work with several programming languages and applications including R, JavaScript,
 Python, Matlab, and Excel. 
-
---- 
-
-
-## Install Plotly
-
-Installing Plotly is easy
-
-```{r, eval=FALSE}
-#install.packages("plotly")
-library(plotly)
-```
-
----
-
-## Load data for examples
-
-```{r, message=FALSE}
-# load the plotly R package
-library(plotly)
-
-# load the diamonds dataset from the ggplot2 package
-data(diamonds, package = "ggplot2")
-diamonds
-```
 
 ---
 
@@ -276,147 +229,46 @@ diamonds
 
 - There are two main ways to create a plotly object:
 
+--
+
   - Transforming a `ggplot2` object (via `ggplotly()`) into a plotly object 
 
-  - Directly initializing a plotly object with `plot_ly()`/`plot_geo()`/`plot_mapbox()`
-  
-- Both approaches are powered by the JavaScript graphing library plotly.js so many of the same concepts and tools that you learn for one interface can be reused in the other
+--
+
+  - Directly initializing a plotly object with `plot_ly()`/`plot_geo()`/`plot_mapbox()`. This provides a 'direct' interface to plotly.js with some additional abstractions to help reduce typing
+
+--
+
+- Both approaches are powered by plotly.js so many of the same concepts and tools that you learn for one interface can be reused in the other
 
 ---
 
 ## `plot_ly()`
 
-- Any graph made with the **plotly** R package is powered by the JavaScript library [plotly.js](https://github.com/plotly/plotly.js) 
+- The `plot_ly()` function has numerous arguments that are unique to the R package (e.g., `color`, `stroke`, `span`, `symbol`, `linetype`, etc.) and make it easier to encode data variables as visual properties (e.g., color). By default, these arguments map values of a data variable to a visual range defined by the plural form of the argument
 
-- The `plot_ly()` function provides a 'direct' interface to plotly.js with some additional abstractions to help reduce typing. 
+--
 
-- If we assign variable names (e.g., `cut`, `clarity`, etc.) to visual properties (e.g., `x`, `y`, `color`, etc.), `plot_ly()` tries to find a sensible geometric representation of that information for us
+- (almost) every function anticipates a **plotly** object as input to its first argument and returns a modified version of that **plotly** object 
 
---- 
+--
 
-## `plot_ly()`
+- The `layout()` function, which modifies layout components of the plotly object, anticipates a **plotly** object in its first argument and its other arguments add and/or modify various layout components of that object (e.g., the title)
 
-```{r, eval=FALSE}
-plot_ly(diamonds, x = ~cut, y = ~clarity)
-```
+--
 
----
+- A family of `add_*()` functions (e.g., `add_histogram()`, `add_lines()`, `add_trace()`, etc.) define how to render data into geometric objects by adding a graphical layer to a plot. Layers can be included to add: 
 
-## `plot_ly()`
-
-```{r, message=FALSE, echo=FALSE}
-plot_ly(diamonds, x = ~cut, y = ~clarity)
-```
-
-
---- 
-
-## `plot_ly()` functionality
-
-The `plot_ly()` function has numerous arguments that are unique to the R package (e.g., `color`, `stroke`, `span`, `symbol`, `linetype`, etc.) and make it easier to encode data variables (e.g., diamond clarity) as visual properties (e.g., color). By default, these arguments map values of a data variable to a visual range defined by the plural form of the argument. 
-
-In this example, `color` is used to map each level of diamond clarity to a different color. Then, `colors` is used to specify the range of colors (which, in this case, the `"Accent"` color palette from the **RColorBrewer** package, but one can also supply custom color codes or a color palette function like `colorRamp()`).
-
----
-
-## `plot_ly()` functionality
-
-```{r, eval=FALSE}
-plot_ly(diamonds, x = ~cut, color = ~clarity, colors = "Accent")
-```
-
----
-
-## `plot_ly()` functionality
-
-```{r, message=FALSE, echo=FALSE}
-plot_ly(diamonds, x = ~cut, color = ~clarity, colors = "Accent")
-```
-
---- 
-
-## `layout()` 
-
-- (almost) every function anticipates a **plotly** object as input to its first argument and returns a modified version of that **plotly** object. 
-
-- For example, the `layout()` function anticipates a **plotly** object in its first argument and its other arguments add and/or modify various layout components of that object (e.g., the title):
-
----
-
-## `layout()` 
-
-```{r, eval=FALSE}
-layout(
-  plot_ly(diamonds, x = ~cut),
-  title = "My beatiful histogram"
-)
-```
-
----
-
-## `layout()` 
-
-```{r, message=FALSE, echo=FALSE}
-layout(
-  plot_ly(diamonds, x = ~cut),
-  title = "My beatiful histogram"
-)
-```
-
----
-
-## `layout()` 
-
-or using the `%>%` operator from the **magrittr** package:
-
-```{r, eval=FALSE}
-diamonds %>%
-  plot_ly(x = ~cut) %>%
-  layout(title = "My beatiful histogram")
-```
-
---- 
-
-## Layers and `add_*()` 
-
-- In addition to `layout()` for adding/modifying part(s) of the graph's layout, there are also a family of `add_*()` functions (e.g., `add_histogram()`, `add_lines()`, etc.) that define how to render data into geometric objects. 
-
-- These functions add a graphical layer to a plot. A *layer* can be thought of as a group of graphical elements that can be sufficiently described using only 5 components: 
-
+--
   - data
   - aesthetic mappings (e.g., assigning `clarity` to `color`)
-  - a geometric representation (e.g., rectangles, circles, etc.)
+  - geometric representation (e.g., rectangles, circles, etc.)
   - statistical transformations (e.g., sum, mean, etc.)
-  - positional adjustments (e.g., dodge, stack, etc.). 
+  - positional adjustments (e.g., dodge, stack, etc.) 
 
 ---
 
-
-## Layers and `add_*()` 
-
-Let's add an `add_histogram()` layer:
-
-```{r, eval=FALSE}
-diamonds %>%
-  plot_ly() %>% 
-  add_histogram(x = ~cut)
-```
-
---- 
-
-## Layers and `add_*()` 
-
-Let's add an `add_histogram()` layer:
-
-```{r, message=FALSE, echo=FALSE}
-diamonds %>%
-  plot_ly() %>% 
-  add_histogram(x = ~cut)
-```
-
----
-
-# `ggplotly()`
+## `ggplotly()`
 
 - We also have the option of working with `ggplotly()` function from the **plotly** package, which can translate **ggplot2** to **plotly**. 
 
@@ -427,22 +279,113 @@ p <- ggplot(*) + geom_*()
 ggplotly(p)
 ```
 
+--
+
 - This functionality can be really helpful for quickly adding interactivity to your existing **ggplot2** workflow.
 
-- `ggplotly()` can be desirable for creating visualizations that aren't necessarily straightforward to achieve without it. This can be particularly true for exploring statistical summaries across groups. The ability to quickly generate statistical summaries across groups works for basically any geom (e.g., `geom_boxplot()`, `geom_histogram()`, `geom_density()`, etc.)
+--
+
+- `ggplotly()` provides advantages to `plot_ly()` in particular when it comes to exploring statistical summaries across groups. The ability to quickly generate statistical summaries across groups and map to an interactive plot works for basically any geom (e.g., `geom_boxplot()`, `geom_histogram()`, `geom_density()`, etc.)
+
+---
+
+# Getting started
+
+---
+
+## Install Plotly
+
+```{r, eval=TRUE}
+if(!require(plotly)) install.packages("plotly", repos = "http://cran.us.r-project.org")
+library(plotly)
+```
+
+---
+
+## Load data for examples 
+
+For examples today we will be using COVID data direct downloaded from the New York Times GitHub page: https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-states.csv
+
+This data source provides COVID cases (confirmed infections) and deaths by each US state and each date
+
+We have preprocessed this data and added some additional variables in the file `"input_data/coronavirus_states.csv"`
+  - `population` of each state
+  - `new_cases`: daily change in cases
+  - `new_deaths`: daily change in deaths
+  - `per100k`: cases per 100,000 population
+  - `deathsper100k`: deaths per 100,000 population
+  - `naive_CFR`: naive[1] Case Fatality Rate (CFR) = deaths / cases, for each state on each date
+  
+In the lab we will preprocess this data together.
+
+.footnote[[1]"naive" since calculation of CFR requires more sophisticated modeling to account for time delays between cases and deaths]
+
+---
+
+## Load data for examples
+
+```{r, eval=TRUE, echo=TRUE, message=FALSE}
+# import data
+cv_states = read.csv("input_data/coronavirus_states.csv")
+
+# format the date
+cv_states$date = as.Date(cv_states$date, format="%Y-%m-%d")
+
+# create most recent day data frame
+cv_states_today = subset(cv_states, date==max(cv_states$date))
+```
+
+---
+
+## Load data for examples
+
+Inspect the data
+
+```{r, eval=TRUE}
+str(cv_states)
+```
+
+---
+
+## Load data for examples
+
+Inspect the data
+
+```{r, eval=TRUE}
+#dim(cv_states)
+summary(cv_states)
+```
+
+---
+
+# Examples
 
 ---
 
 ## Basic Scatterplot
 
-- `plot_ly()` allows basic scatterplots
+Let's start with a scatterplot of population-normalized (`per100k`) deaths vs. cases on the most recent date from dataframe `cv_states_today`
+
 - Specify a scatterplot by `type = "scatter"` and `mode = 'markers'`
 - Notice how the arguments for the `x` and `y` variables as specified as formulas, with the tilde operator (`~`)
-- Use `color` to specify additional dimension (factor or continuous) 
-- Notice the automatic `tooltip` that appears when your mouse hovers over each point
-- Doubleclick any item in legend to isolate that point
+- Use `color` to specify an additional data dimension (factor or continuous), each level of which is mapped to a different color (factor or continuous) 
+- Use `colors` is used to specify the range of colors
 
 ```{r, eval=FALSE}
+library(plotly)
+cv_states_today %>% 
+           plot_ly(x = ~deathsper100k, y = ~per100k, 
+                   type = 'scatter',
+                   mode = 'markers',
+                   color = ~state,
+                   colors = "Blues")
+```
+
+---
+
+## Basic Scatterplot
+
+```{r, echo=FALSE, message=FALSE}
 library(plotly)
 cv_states_today %>% 
            plot_ly(x = ~deathsper100k, y = ~per100k, 
@@ -451,26 +394,19 @@ cv_states_today %>%
                    color = ~state)
 ```
 
----
-
-## Basic Scatterplot
-
-```{r, echo=FALSE, message=FALSE}
-library(plotly)
-cv_states_today %>% 
-           plot_ly(x = ~deathsper100k, y = ~per100k, 
-                   type = 'scatter',
-                   mode = 'markers',
-                   color = ~population)
-```
+- Scatterplot of deaths vs. cases population-normalized (`per100k`)
+- plotly allows us to hover and see the exact $(x,y)$ values of each point
+- Notice the automatic `tooltip` that appears when your mouse hovers over each point
+- Doubleclick any item in legend to isolate that point in the plot
 
 ---
 
 ## Scatterplot: size
 
 - You can add an additional dimension by adjusting the `size` of each point (also with `~` operator)
-- Specify the limits of the size through `sizes`
-- `sizemode` specifies `'area'` or `'diameter'`
+  - Specify the limits of the size through `sizes`
+  - `sizemode` specifies `'area'` or `'diameter'`
+- Here we specify size as mapped to each state's `naive_CFR`
 
 ```{r, eval=FALSE}
 cv_states_today %>% 
@@ -478,7 +414,7 @@ cv_states_today %>%
                    type = 'scatter',
                    mode = 'markers',
                    color = ~state,
-                   size = ~population,
+                   size = ~naive_CFR,
                    sizes = c(5, 70),
                    marker = list(sizemode='diameter', opacity=0.5))
 
@@ -494,19 +430,21 @@ cv_states_today %>%
                    type = 'scatter',
                    mode = 'markers',
                    color = ~state,
-                   size = ~population,
+                   size = ~naive_CFR,
                    sizes = c(5, 70),
                    marker = list(sizemode='diameter', opacity=0.5))
 
 ```
 
+The closer to the bottom right corner of the plot, the higher the CFR, and the larger the point's circle.
 ---
 
 ## Specifying hover information
 
 - You can specify what info will appear when hovering using `hoverinfo` through the `text` argument (also with `~` operator)
-- Multiple variables can be included upon hover
-- Create new lines between variables in `hoverinfo` using `sep = "<br>"`
+  - Multiple variables can be included upon hover
+  - Create new lines between variables in `hoverinfo` using `sep = "<br>"`
+- Let's add `per100k`, `deathsper100k`, and `naive_CFR` to the hover info:
 
 ```{r, eval=FALSE}
 cv_states_today %>% 
@@ -521,7 +459,7 @@ cv_states_today %>%
                          sep = "<br>")) 
 ```
 
---- 
+---
 
 ## Specifying hover information
 
@@ -537,6 +475,8 @@ cv_states_today %>%
                          paste(" CFR (%): ", naive_CFR,sep=""),
                          sep = "<br>")) 
 ```
+
+We can now clearly understand the information being shown in the `tooltip`
 
 ---
 
@@ -575,11 +515,12 @@ cv_states_today %>%
          hovermode = "compare")
 ```
 
---- 
+---
 
 ## 3D Scatterplot
 
 - Can add a 3rd dimension using `type = 'scatter3d'` (make sure to specify the dimension as `z`)
+
 ```{r, eval=FALSE}
 cv_states_today %>% 
   plot_ly(x = ~deathsper100k, y = ~per100k, z = ~population,
@@ -615,7 +556,7 @@ cv_states_today %>%
 ## Scatterplot with `ggplotly()`
 
 - You can create a scatterplot with the `ggplotly()` function in 1 additional line of code
-- Here we have also added `geom_smooth()` to see the pattern in the scatter. Note that the `geom_smooth()` line also appers upon hover
+- The advantage of `ggplotly()` is that it allows taking advantage of the geom `geom_smooth()` to see the pattern in the scatter
 
 ```{r, eval=FALSE}
 p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
@@ -631,57 +572,53 @@ p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + 
 ggplotly(p)
 ```
 
+The `geom_smooth()` helps us to see there is not a clear correlation between cases and deaths relative to population across the states.
+Note that the `geom_smooth()` line also appears upon hover.
+
 ---
 
-## Scatterplot with `ggplotly()`
+## Annotations
 
 - You can add annotations to your interactive plot
 
 ```{r, eval=FALSE}
-
 p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
-fig <- p %>% 
-  ggplotly(layerData = 2, originalData = F) %>% 
-  add_fun(function(p) {
-    fig %>% slice(which.min(se)) %>%
-      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
-      add_annotations("Minimum uncertainty")
-  })
-fig <- fig %>% 
-  add_fun(function(p){
-    fig %>% slice(which.max(se)) %>% 
+fig <- p %>%
+  ggplotly(layerData = 2, originalData = F) %>%
+  add_fun(function(fig) {
+    fig %>% slice(which.max(se)) %>%
       add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
       add_annotations("Max uncertainty")
   })
-fig
-
+fig <- fig %>% add_fun(function(p) {
+    fig %>% slice(which.min(se)) %>%
+      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
+      add_annotations("Min uncertainty")
+  })
 ```
 
 ---
 
-## Scatterplot with `ggplotly()`
+## Annotations
 
-```{r, eval=FALSE, echo=FALSE, message=FALSE}
-
+```{r, echo=FALSE, message=FALSE}
 p <- ggplot(cv_states_today, aes(x=deathsper100k, y=per100k, size=naive_CFR)) + geom_point() + geom_smooth()
-fig <- p %>% 
-  ggplotly(layerData = 2, originalData = F) %>% 
-  add_fun(function(p) {
-    fig %>% slice(which.min(se)) %>%
-      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
-      add_annotations("Minimum uncertainty")
-  })
-fig <- fig %>% 
-  add_fun(function(p){
-    fig %>% slice(which.max(se)) %>% 
+fig <- p %>%
+  ggplotly(layerData = 2, originalData = F) %>%
+  add_fun(function(fig) {
+    fig %>% slice(which.max(se)) %>%
       add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
       add_annotations("Max uncertainty")
   })
+fig <- fig %>% add_fun(function(p) {
+    fig %>% slice(which.min(se)) %>%
+      add_segments(x = ~x, xend = ~x, y = ~ymin, yend = ~ymax) %>%
+      add_annotations("Min uncertainty")
+  })
 fig
-
 ```
 
---- 
+---
 
 ## Line graph
 
@@ -690,10 +627,11 @@ fig
 
 ```{r, eval=FALSE}
 
-plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines",
+cv_states %>% filter(population>7500000) %>% 
+plot_ly(x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines",
         hoverinfo = 'text',
-        text = ~paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""), 
-                       paste(" Cases per 100k: ", per100k, sep=""), sep = "<br>"))
+        text = ~paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Deaths (total): ", deaths, sep=""), 
+                       paste(" Deaths per 100k: ", deathsper100k, sep=""), sep = "<br>"))
 ```
 
 ---
@@ -701,36 +639,25 @@ plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mod
 ## Line graph
 
 ```{r, echo=FALSE, message=FALSE}
-
-plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines",
+cv_states %>% filter(population>7500000) %>% 
+plot_ly(x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines",
         hoverinfo = 'text',
-        text = ~paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""), 
-                       paste(" Cases per 100k: ", per100k, sep=""), sep = "<br>"))
+        text = ~paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Deaths (total): ", deaths, sep=""), 
+                       paste(" Deaths per 100k: ", deathsper100k, sep=""), sep = "<br>"))
 ```
+
+Deaths stabilized for New York and New Jersey around the time they started to rise for California, Texas, and Florida.
+It helps to be able to see the exact values for each date upon hover.
 
 ---
 
-## Line graph: `plot_ly()` vs. `ggplotly()`
+## Line graph: `ggplotly()`
 
-- Both `plot_ly()` and `ggplotly()` line plots can be specified with little code
-- simply pass a `ggplot` object to `ggplotly()` to create an interactive version
+- Simply pass a `ggplot` object to `ggplotly()` to create an interactive version
 - `subplot()` can be used to join arrange multiple plots -- works similarly to `grid.arrange()` function from the **gridExtra** package
   - Compare the automatic `tooltip` results for both plots
 
 ```{r, eval=FALSE}
-
-g1 = plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines")
-g2 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
-g2_plotly <- ggplotly(g2)
-subplot(g1, g2_plotly)
-
-```
-
----
-
-## Line graph: `plot_ly()` vs. `ggplotly()`
-
-```{r, message=FALSE, echo=FALSE}
 
 g1 = plot_ly(cv_states, x = ~date, y = ~deaths, color = ~state, type = "scatter", mode = "lines")
 g2 = ggplot(cv_states, aes(x = date, y = cases, color = state)) + geom_line() + geom_point(size = .5, alpha = 0.5)
@@ -746,18 +673,6 @@ subplot(g1, g2_plotly)
 - You can specify the tooltip text in the `ggplot()` or `ggplotly()` prompt, but note that the `ggplotly()` prompt only accepts text in `" "`
 
 ```{r, eval=FALSE}
-
-g1 = ggplot(cv_states, aes(x = date, y = cases, color = state, 
-                           text=paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""),sep = "<br>") )) + geom_line() + geom_point(size = .5, alpha = 0.5) 
-ggplotly(g1, tooltip = "text")
-
-```
-
---
-
-## Specifying text with `ggplotly()`
-
-```{r, message=FALSE, echo=FALSE}
 
 g1 = ggplot(cv_states, aes(x = date, y = cases, color = state, 
                            text=paste( paste("Date: ", date, sep=""), paste(state, ":", sep=""), paste(" Cases (total): ", cases, sep=""),sep = "<br>") )) + geom_line() + geom_point(size = .5, alpha = 0.5) 
@@ -784,6 +699,8 @@ subplot(g1, g2_plotly)
 
 ## Histograms
 
+             `plot_ly()`                        `ggplotly()`
+             
 ```{r, echo=FALSE, message=FALSE}
 g1 <- cv_states_today %>% 
   plot_ly(x = ~new_deaths, type = "histogram", xbins = list(size = 1, end=30 ))
@@ -791,7 +708,6 @@ g2 <- cv_states_today %>% ggplot( aes(x=new_deaths)) + geom_histogram(binwidth=1
 g2_plotly <- ggplotly(g2)
 subplot(g1, g2_plotly)
 ```
-
 
 ---
 
@@ -836,24 +752,22 @@ plot_ly(x=colnames(data), y=rownames(data),
 
 ## Heatmap
 
-- We can then create a heatmap from the matrix by using the `type = "heatmap"` argument
-- If you want the x and y axes to show specify that with `x=colnames(data), y=rownames(data)` 
-- You can hide or show scale using `showscale=T/F`
-
 ```{r, message=FALSE, echo=FALSE}
 library(tidyr)
-cv_states_mat <- cv_states %>% select(state, date, newdeathsper100k) %>% filter(date>"2020-03-31") %>% filter(newdeathsper100k < 10)
+cv_states_mat <- cv_states %>% select(state, date, newdeathsper100k) %>% filter(date>"2020-03-31") %>% filter(newdeathsper100k < 8)
 cv_states_mat2 <- as.data.frame(pivot_wider(cv_states_mat, names_from = state, values_from = newdeathsper100k))
 rownames(cv_states_mat2) <- cv_states_mat2$date
 cv_states_mat2$date <- NULL
-data <- as.matrix(cv_states_mat2)
+cv_states_mat2 <- as.matrix(cv_states_mat2)
 
-plot_ly(x=colnames(data), y=rownames(data),
-             z=~data,
+plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
+             z=~cv_states_mat2,
              type="heatmap",
              showscale=T)
 
 ```
+
+We can see when new deaths started to rise and fall for each state. No other state approached the values seen in NY. The hover info conveniently allows us to inspect the exact date and number of new deaths.
 
 ---
 
@@ -862,19 +776,8 @@ plot_ly(x=colnames(data), y=rownames(data),
 You can also create a 3D surface out of the matrix using `type = "surface"`
 
 ```{r, eval=FALSE}
-plot_ly(x=colnames(data), y=rownames(data),
-             z=~data,
-             type="surface",
-             showscale=F)
-```
-
----
-
-## 3D Surface
-
-```{r, message=FALSE, echo=FALSE}
-plot_ly(x=colnames(data), y=rownames(data),
-             z=~data,
+plot_ly(x=colnames(cv_states_mat2), y=rownames(cv_states_mat2),
+             z=~cv_states_mat2,
              type="surface",
              showscale=F)
 ```
@@ -895,12 +798,12 @@ Making choropleth maps requires two main types of input:
 
 The GeoJSON data is passed to the geojson argument, and the data is passed into the **z argument** of the choropleth `trace`
 
---
+---
 
 ## Choropleth Maps: Setup
 
 - Let's focus on interactively mapping the feature `naive_CFR` to each of the US states, including their boundaries
-- To use the USA States geometry, set `locationmode='USA-states'` and *provide locations as two-letter state abbreviations*
+- To use the USA States geometry, set `locationmode='USA-states'` and provide locations as two-letter state abbreviations
 - Our `cv_states` identifies states by their long names, so we need to transpose to their abbreviations first
 
 ```{r, eval=FALSE}
@@ -1002,11 +905,14 @@ fig
 
 ```
 
+The northeast was hit hard with high CFRs. It would be interesting to see this map at different time points. 
+
 ---
 
 ## A note on interactive mapping
 
-- There are actually 4 different ways to render sf objects with plotly: `plot_geo()`, `plot_ly()`, `plot_mapbox()`, and via **ggplot2**’s `geom_sf()`. 
+- There are in fact 4 different ways to render interactive maps with plotly: `plot_geo()`, `plot_ly()`, `plot_mapbox()`, and via **ggplot2**’s `geom_sf()`. 
+
 - Plotly is a general purpose visualization library and doesn’t offer most fully featured geo-spatial visualization toolkit. If you run into limitations with plotly’s mapping functionality there are many other tools for interactive geospatial visualization in R, including: **leaflet**, **mapview**, **mapedit**, **tmap**, and **mapdeck**.
 
 
@@ -1014,13 +920,15 @@ fig
 
 # Interactive tables
 
-The `DT` package creates an interactive **DataTable** html widget out of a dataframe in 1 line of code:
+The `DT` package creates an interactive **DataTable** html widget out of a dataframe in 1 line of code
 
 ```{r, eval=FALSE}
 library(DT)
 cv_california <- cv_states %>% filter(state=="California") %>% select(date,cases,deaths,new_cases,new_deaths,naive_CFR)
 datatable(cv_california)
 ```
+
+Note that you can interactively reorder the values by clicking on the arrows at the top of each column, or search for specific values
 
 ---
 
@@ -1038,7 +946,9 @@ datatable(cv_california)
 
 Both `plot_ly()` and `ggplotly()` objects and be computed directly as part of an R Markdown file, which means they will show up on a website you create using R Markdown and GitHub pages.
 
-But you may want to save and embed the interactive HTML file, or a static image based on the file.
+You can also share your visualizations on https://plot.ly/ by making an account on their site
+
+But you may want to save and embed the interactive HTML file, or save a static image based on the plot
 
 ---
 
@@ -1054,9 +964,6 @@ p <- plot_ly(x = rnorm(100))
 saveWidget(p, "p1.html", selfcontained = F, libdir = "lib")
 saveWidget(p, "p2.html", selfcontained = F, libdir = "lib")
 ```
-
-- If you want to share your visualizations on https://plot.ly/ you can make an
-account on their site
 
 ---
 
@@ -1084,6 +991,10 @@ plot_ly() %>%
 
 Hopefully in this class you have learned: 
 
+* How to create plots with **plotly** package using either `plot_ly()` calls or `ggplotly()` applied to a **ggplot2** workflow
+
+* Other interactive options -- maps (multiple options), tables (**DataTable**)
+
 * To appreciate how interactive visualization can help to explore data in ways static graphics cannot
 
 * Get an idea of the multitude of options available to you
@@ -1101,17 +1012,6 @@ Hopefully in this class you have learned:
 * Some examples of bad practices: [(link)](https://badvisualisations.tumblr.com/)
 
 * And just hilariously bad examples: [(link)](https://viz.wtf/)
-
----
-
-## Next week
-
-- Explore how interactive visualization can be used in practice
-
---
-  - Data science statistical genetics company, BioRealm.ai
-  
-  - NASA data science group
 
 ---
 
